--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,11 @@
     <string name="screen1Description">You can easily book your ticket the way you want using our app.</string>
     <string name="screen2Description">You can easily pay your ticket fees through a Visa/ Debit cards.</string>
     <string name="screen3Description">We ensure that you have a very comfortable journey from start to finish.</string>
+    <string name="title_activity_bottom_navigation">BottomNavigation</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <!-- Bottom navigation Bar -->
 
 </resources>
