--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Bottom navigation Bar -->
+    <string-array name="choices">
+        <item>Option 1</item>
+        <item>Option 2</item>
+        <item>Option 3</item>
+    </string-array>
 
 </resources>
